# loglicense

./: .cookiecutter.json  .flake8  .gitignore  .loglicense  .pre-commit-hooks.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  coverage.xml  noxfile.py  pyproject.toml  test.md
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt  usage.md
loglicense/: __init__.py  __main__.py  licenselogger.py  utils.py
src/loglicense/: __init__.py  __main__.py
tests/: __init__.py  test_main.py  test_package.py
