[tool.poetry]
name = "loglicense"
version = "0.1.0"
description = "Log License"
authors = ["Martin Closter Jespersen <martincjespersen@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/martincjespersen/loglicense"
repository = "https://github.com/martincjespersen/loglicense"
documentation = "https://loglicense.readthedocs.io"
classifiers = [
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
Changelog = "https://github.com/martincjespersen/loglicense/releases"

[tool.poetry.dependencies]
python = "^3.7"
pathlib = "^1.0.1"
tabulate = "^0.8.10"
typer = "^0.6.1"
toml = "^0.10.2"
types-tabulate = "^0.8.11"
types-toml = "^0.10.8"

[tool.poetry.dev-dependencies]
Pygments = ">=2.10.0"
black = ">=21.10b0"
coverage = {extras = ["toml"], version = ">=6.2"}
darglint = ">=1.8.1"
flake8 = ">=4.0.1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.5"
furo = ">=2021.11.12"
isort = ">=5.10.1"
mypy = ">=0.930"
pep8-naming = ">=0.12.1"
pre-commit = ">=2.16.0"
pre-commit-hooks = ">=4.1.0"
pytest = ">=7.2.0"
pyupgrade = ">=2.29.1"
safety = ">=2.2.0"
sphinx = ">=4.3.2"
sphinx-autobuild = ">=2021.3.14"
sphinx-click = ">=3.0.2"
typeguard = ">=2.13.3"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
myst-parser = {version = ">=0.16.1"}

[tool.poetry.scripts]
loglicense = "loglicense.__main__:app"

[tool.coverage.paths]
source = ["loglicense", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["loglicense", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
